2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* BigEndianStructure.cs:
	* DiscImageChef.Helpers.csproj: Added code that directly
	marshals from a big-endian byte array. But untested with
	nested structures.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Public beta release 3.2.99.1.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Added DOS to C# date converter.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Helpers.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Helpers.csproj: Bump to version 3.2.0

2016-07-31  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Added support for U.C.S.D. Pascal
	filesystem, closes #31

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Swapping.cs:
	* PrintHex.cs:
	* ArrayFill.cs:
	* ArrayIsEmpty.cs:
	* DateHandlers.cs:
	* StringHandlers.cs:
	* BigEndianBitConverter.cs:
	* EndianAwareBinaryReader.cs: Refactor and code cleanup.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* ArrayFill.cs:
	* ArrayIsEmpty.cs:
	* DiscImageChef.Helpers.csproj:
	  Implemented Certance, Fujitsu and Hewlett-Packard vendor
	  commands.

2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* StringHandlers.cs:
	  Fixed string conversion when input byte array is null.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* StringHandlers.cs:
	  Finally CD-Text on lead-in is getting decoded correctly...

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj:
	  Upgrade .NET version to 4.0.